--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<p >
-	      My favorite color is
-		<span class="favorite-color"> Red</span>
+	     
+		<span class="favorite-color"> My favorite color is  Red</span>
 	</p>
     <script type="text/javascript" src="./script.js">
 </script>
