--- a/main.html
+++ b/main.html
@@ -8,9 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p >
-	    
-		<span class="favorite-color"> My favorite color is</span>
+	<p >My favorite color is <span class="favorite-color">RED</span>
 	</p>
     <script type="text/javascript" src="./script.js">
 </script>
